addition of missing plugins